src/app/components/navigation/navbar/navbar.component.scss
@import '../../../../breakpoints';

#sidenav-toggle {
  margin-top: 3px;
}

a {
  text-decoration: none;
}

.grow {
  display: flex;
  flex-grow: 10;
}

.start {
  display: flex;
  justify-content: flex-start;
}

.end {
  display: flex;
  justify-content: flex-end;
}

#navbar {
  z-index: 15;
  font-size: 0.9em;
  color: #333;
  font-weight: normal;
  height: 67px;
  background-color: rgba(255, 255, 255, 1);
  border-bottom: 3px solid #eee;
  padding: 0 32px;

  mat-toolbar {
    border-radius: 0;
  }

  display: flex;
  align-items: stretch;

  @include max-width(m) {
    align-items: center;
  }

  > * + * {
    margin-left: 2rem;
  }
}

.nav-group {
  display: flex;
  height: 100%;
  gap: 8px;
  align-items: center;

  .navbar-link {
    display: flex;
    align-items: center;
    color: #555;
    cursor: pointer;
    padding: 0 0.5rem;
    line-height: 2;

    position: relative;
    &:after {
      position: absolute;
      content: '';
      left: 0;
      bottom: 0;
      height: 100%;
      width: 100%;
      border-bottom: solid 0.2rem #00afe7;
      transform: scaleX(0) translateY(0.2rem);
      transition: transform 250ms ease-in-out;
    }

    &:hover:after,
    &.active:after {
      transform: scaleX(1) translateY(0.2rem);
    }

    & + .navbar-link {
      margin-left: 0.5rem;
    }
  }
}

@keyframes accountPreviewFadeIn {
  from {
    opacity: 0;
    transform: scale(0.9);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

.account-preview {
  padding: 16px 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;
  transform-origin: center center;
  animation: accountPreviewFadeIn 200ms ease-out;

  img.account-image {
    width: 128px;
    height: 128px;
    border-radius: 50%;
  }

  div.account-info {
    display: flex;
    flex-direction: column;
    align-items: center;

    span.account-type {
      color: gray;
      font-size: 12px !important;
      margin-top: -4px;
    }
  }
}

.mat-mdc-icon-button {
  display: flex;
  justify-content: center;
  align-items: center;
  //background-color: green !important;
  font-size: 16px;
  width: 40px !important;
  height: 40px !important;
  vertical-align: middle;
  text-align: center;
  padding: 0;
}

.menu-user-name {
  color: var(--brand-color);
}
#logo-link {
  display: flex;
  justify-content: center;
  align-items: center;

  #applogo {
    height: 3rem;
  }
}

div.profile-dropdown-button {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
  cursor: pointer;
  padding-left: 8px;
  font-weight: 500;
}

#progress-bar {
  // transition: opacity 280ms;
  position: fixed;
  z-index: 19;
  pointer-events: none;
  left: 0;
  top: 0;
  opacity: 0;
  margin: 0;
  &.loading {
    opacity: 1;
  }
}

.desktop {
  @include max-width(m) {
    display: none;
  }
}

.mobile {
  @include min-width(m) {
    display: none;
  }
}

